# origin-axiom

./: .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  AUDIT_REPORT_EXTERNAL.md  CC3_TO_CC_2026-07-22_p3_complete.md  CC3_TO_CC_2026-07-22_qp1_complete.md  CC3_TO_CC_2026-07-22_qp2_complete.md  CC3_TO_CC_2026-07-22_qp3_complete.md  CC3_TO_CC_2026-07-22_qp4_complete.md  CC3_TO_CC_2026-07-23_b766_audit.md  CC3_TO_CC_2026-07-23_r28_10_stabilizations.md  CHANGELOG.md  CITATION.cff  CLAIMS.md  DYNAMIC_THETA_VERDICT.md  FRUSTRATED_CANCELLATION_ASSESSMENT.md  GOVERNANCE.md  IMPLEMENTATION_PLAN.md  LICENSE  METHOD.md  OBSTRUCTION_BRANCH_PROGRESS_ASSESSMENT.md  PHASES.md  PHYSICAL_MOTIVATION_ANALYSIS.md  PROGRESS_LOG.md  PROVENANCE.md  README.md  REPRODUCIBILITY.md  ROADMAP.md  TERMINOLOGY.md  TESTING_ROADMAP.md  WORKING_RULES.md  act5_dynamical_theta_star.tex  collect_tex.sh  pyproject.toml  requirements.txt  verification_notes.md
config/: microcavity_param_sweep.yaml  theta_star_config.json
docs/: 01_origin_axiom.md  02_research_program.md  03_toy_universe_v0_1.md  ACT23_BRIDGE_STATUS.md  ACT2_theta_star_summary.csv  ACTIII_ROADMAP.md  ACT_VII_MINI_CONTRACT.txt  (+90 more)
packaging/pypi-originaxiom/: pyproject.toml
phase1/: ASSUMPTIONS.md  CLAIMS.md  PHASE1_ALIGNMENT_v1.md  PROGRESS_LOG.md  README.md  REPRODUCIBILITY.md  SCOPE.md  __init__.py  pyproject.toml
phase1/config/: phase1.yaml  phase1_binding_off.yaml  phase1_binding_on.yaml  phase1_binding_on_strong.yaml
phase1/outputs/runs/figA_20251225T223955Z_53d34f91/: meta.json  results.yaml
phase1/outputs/runs/figB_20251225T223953Z_3d47144c/: meta.json  unconstrained.npz
phase1/outputs/runs/figC_20251225T223947Z_bdd0fba0/: L24_unconstrained.npz  meta.json  scaling_summary.yaml
phase1/outputs/runs/figD_20251225T223950Z_7daf725a/: meta.json  results.yaml
phase1/outputs/runs/figD_eps_20251229T113257Z_3abf4603/: results.yaml
phase1/outputs/runs/figD_eps_20251229T114750Z_8b8d575a/: meta.json  results.yaml
phase1/outputs/runs/figD_eps_20251229T114756Z_4a5d985c/: meta.json
phase1/outputs/runs/figD_eps_20251229T150033Z_31118e96/: meta.json  results.yaml
phase1/outputs/tests/: binding_off.run_id.txt  binding_on.run_id.txt
phase1/paper/: .gitignore  .latexmkrc  main.tex  main.toc  main.xdv  references.bib
phase1/paper/sections/: 00_preamble.tex  01_intro.tex  02_axiom.tex  03_toy_models.tex  04_methods.tex  05_results.tex  06_limitations.tex  07_conclusion.tex
phase1/src/: __init__.py  lattice_driver.py  phase_floor.py  plots.py  utils_meta.py
phase1/workflow/: Snakefile
(+6397 files in other folders)
