[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "originaxiom"
version = "0.0.1"
description = "Origin Axiom — mathematics of the figure-eight substitution object. Namespace reservation; real releases will follow."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "originaxiom"}]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/originaxiom/origin-axiom"
